--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
       <button type="submit">Sign Up</button>
       <div class="success-message" id="success-message" style="display:none;">
-        Thank you for joining SwapEra! We'll contact you soon with your first skill match.
+        This is Just a Sample webpage, Thankyou for Showing your interest.
       </div>
       <div class="error-message" id="error-message" style="display:none;">
         Oops! Please check your details and try again.
