--- a/index.html
+++ b/index.html
@@ -2,353 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SwapEra | Skill Swap Platform - App Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SwapEra | Learn by Teaching</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #0077cc;
-      --primary-dark: #005fa3;
-      --accent: #ffd700;
-      --bg: #f9fafe;
-      --card-bg: #fff;
-      --shadow: 0 8px 32px rgba(0,0,0,0.09);
-      --radius: 18px;
-      --green: #11b17c;
-      --red: #e73c3c;
+    body { margin: 0; font-family: 'Poppins', sans-serif; background: #f9f9f9; color: #333; }
+    header, footer { background: #007bff; color: white; padding: 1rem; text-align: center; }
+    section { padding: 3rem 1.5rem; max-width: 1200px; margin: auto; }
+    h1, h2, h3 { color: #007bff; }
+    .hero { background: linear-gradient(to right, #4cc9f0, #007bff); color: white; padding: 5rem 2rem; text-align: center; }
+    .cta { background: white; color: #007bff; padding: 0.75rem 2rem; border-radius: 30px; text-decoration: none; font-weight: bold; }
+    .feature-grid, .profile-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; }
+    .card { background: white; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); padding: 1.5rem; }
+    .form-section input, .form-section textarea, select {
+      width: 100%; padding: 0.75rem; margin-bottom: 1rem; border-radius: 10px; border: 1px solid #ccc;
     }
-    html { scroll-behavior: smooth;}
-    body {
-      font-family: 'Poppins', Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: var(--bg);
-      color: #222;
-    }
-    .navbar {
-      position: sticky; top: 0; left: 0; right: 0;
-      z-index: 100; background: #fff;
-      box-shadow: 0 2px 16px rgba(0,0,0,0.04);
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 0.3rem 1.5rem;
-    }
-    .navbar .logo {
-      display: flex; align-items: center;
-      font-weight: 600; font-size: 1.3rem; color: var(--primary);
-      gap: 0.7rem; text-decoration: none;
-    }
-    .navbar .avatar {
-      width: 36px; height: 36px; border-radius: 50%; object-fit: cover;
-      border: 2.5px solid var(--primary);
-    }
-    .main-container {
-      max-width: 1280px;
-      margin: 0 auto;
-      padding: 24px 12px 40px 12px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 32px;
-    }
-    /* Left: Sidebar/Profile */
-    .sidebar {
-      flex: 1 1 270px; max-width: 320px; min-width: 250px;
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 28px 20px 24px 20px;
-      display: flex; flex-direction: column; align-items: center;
-      gap: 8px;
-    }
-    .sidebar .profile-pic {
-      width: 86px; height: 86px; border-radius: 50%;
-      object-fit: cover; border: 3.5px solid var(--primary);
-      margin-bottom: 7px;
-    }
-    .sidebar .verified {
-      display: inline-block;
-      color: var(--green);
-      font-size: 1.15em;
-      margin-left: 5px;
-      vertical-align: middle;
-    }
-    .sidebar h2 {
-      margin: 0 0 8px 0;
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: var(--primary-dark);
-    }
-    .sidebar .bio { color:#444;font-size:1em;text-align:center;margin-bottom:10px;}
-    .sidebar .badge {display:inline-block;background:var(--accent);color:#222;padding:2px 12px;border-radius:8px;margin:2px 2px 2px 0;font-size:0.97em;}
-    .sidebar .lang {
-      background: #e2e6ff;
-      color: #2b2b89;
-      padding: 2px 9px;
-      border-radius: 7px;
-      margin: 2px 2px 2px 0;
-      font-size: 0.93em;
-    }
-    .sidebar .kyc-btn {
-      margin-top: 7px;
-      background: var(--primary);
-      color: #fff;
-      border: none;
-      border-radius: 7px;
-      padding: 7px 18px;
-      font-weight: 600;
-      cursor: pointer;
-      font-size: 0.99rem;
-      transition: background 0.19s;
-    }
-    .sidebar .kyc-btn:hover { background: var(--primary-dark);}
-    .sidebar .qr-link {
-      margin-top: 12px;
-      text-align: center;
-      font-size: 0.97em;
-    }
-    /* Center: Main Area */
-    .main-area {
-      flex: 2 1 480px;
-      min-width: 340px;
-      max-width: 820px;
-      display: flex;
-      flex-direction: column;
-      gap: 26px;
-    }
-    /* Skill Discovery & Matchmaking */
-    .card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 23px 20px;
-      margin-bottom: 0.6em;
-    }
-    .card h3 {
-      margin-top: 0; margin-bottom: 11px;
-      font-size: 1.22rem;
-      font-weight: 600; color: var(--primary-dark);
-    }
-    .match-list {
-      display: flex; flex-wrap: wrap; gap: 18px;
-    }
-    .match-item {
-      flex: 1 1 210px; min-width: 180px; max-width: 260px;
-      background: #eaf8ff;
-      border-radius: 12px;
-      padding: 14px 13px 12px 13px;
-      box-shadow: 0 2px 10px rgba(0,119,204,0.06);
-      display: flex; flex-direction: column; gap: 5px;
-      align-items: flex-start;
-      margin-bottom: 4px;
-      transition: box-shadow 0.18s, background 0.18s;
-    }
-    .match-item:hover { background: #d1ecfa; box-shadow: 0 4px 20px rgba(0,119,204,0.14);}
-    .match-item .name { font-weight: 600; color: #0077cc; }
-    .match-item .skills { font-size: 0.98em; color: #444;}
-    .match-item .btn { margin-top: 8px; background: var(--primary); color: #fff; border: none; border-radius: 6px; padding: 5px 15px; font-weight: 500; cursor: pointer; font-size: 0.97em;}
-    /* Session Scheduler */
-    .calendar {
-      width: 100%;
-      display: flex;
-      gap: 22px;
-      flex-wrap: wrap;
-    }
-    .calendar .session {
-      background: #e9ffe9;
-      border-radius: 11px;
-      padding: 13px 18px;
-      margin-bottom: 9px;
-      box-shadow: 0 1px 8px rgba(0,170,80,0.06);
-      color: #117c45;
-      min-width: 180px;
-      flex: 1 1 180px;
-      display: flex; flex-direction: column; gap: 2px;
-    }
-    .calendar .session .actions button {
-      background: #fff; color: var(--green); border:1px solid var(--green); border-radius: 6px; padding: 3px 12px;margin-right:6px;cursor:pointer;font-size:0.97em;transition:background 0.13s;
-    }
-    .calendar .session .actions button:hover { background: var(--green); color: #fff;}
-    /* Video & Chat */
-    .video-area { display: flex; gap: 22px; flex-wrap: wrap;}
-    .video-box, .chat-box {
-      background: #f2f8ff;
-      border-radius: 14px;
-      box-shadow: 0 2px 12px rgba(0,119,204,0.08);
-      padding: 16px 13px;
-      min-width: 220px; flex: 1 1 260px;
-      max-width: 400px;
-      display: flex; flex-direction: column; height: 260px;
-    }
-    .video-box { align-items: center; justify-content: center; }
-    .chat-box { overflow-y: auto; }
-    .chat-msg { margin: 5px 0; }
-    .chat-msg.me { text-align: right; color: var(--primary); }
-    .chat-input-row { display: flex; gap: 6px; margin-top: auto;}
-    .chat-input-row input { flex:1; border-radius:6px; border:1px solid #aad; padding:7px;}
-    .chat-input-row button { background:var(--primary); color:#fff; border:none; border-radius:6px; padding:7px 16px; font-weight:500; cursor:pointer;}
-    /* Ratings */
-    .ratings-row { display: flex; gap: 14px; align-items: center; }
-    .star { color: #ffd700; font-size: 1.3em;}
-    .review { font-size: 1em; color: #555;}
-    /* Notifications */
-    .notif-list { margin-top:10px;}
-    .notif { background:#fffbe6; border-left:4px solid #ffd700; border-radius:7px; padding:7px 11px; margin-bottom:5px; font-size:0.98em;}
-    /* Progress */
-    .progress-bar {
-      background:#e3f0fe;
-      border-radius:8px;
-      height:18px;
-      width:100%;
-      margin:10px 0 6px 0;
-      position:relative;
-    }
-    .progress { background:var(--primary); height:100%; border-radius:8px; }
-    .progress-label { font-size:0.95em; color:#222; margin-top:2px;}
-    /* Responsive */
-    @media (max-width: 950px) {
-      .main-container { flex-direction: column; align-items: stretch;}
-      .sidebar { max-width: 100%; margin-bottom: 16px; }
-      .main-area { max-width: 100%; }
-    }
-    @media (max-width: 600px) {
-      .main-container { padding: 12px 2vw 24px 2vw;}
-      .sidebar, .card { padding: 12px 6vw;}
-      .match-list, .video-area, .calendar { flex-direction: column;}
-    }
+    button { background: #007bff; color: white; padding: 0.75rem 2rem; border: none; border-radius: 30px; cursor: pointer; }
   </style>
 </head>
+
 <body>
-  <nav class="navbar">
-    <span class="logo">
-      <svg width="32" height="32" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="16" fill="#0077cc"/><text x="16" y="21" text-anchor="middle" font-size="15" fill="#fff" font-family="Poppins, Arial, sans-serif" font-weight="bold">S</text></svg>
-      SwapEra
-    </span>
-    <img class="avatar" src="https://randomuser.me/api/portraits/men/32.jpg" alt="User Avatar">
-  </nav>
-  <div class="main-container">
-    <!-- Sidebar / Profile -->
-    <aside class="sidebar">
-      <img class="profile-pic" src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profile">
-      <h2>Rahul Sharma
-        <span class="verified" title="KYC Verified">✔️</span>
-      </h2>
-      <div class="bio">Enthusiastic learner & teacher. Love sharing coding skills. <span class="badge">Premium</span></div>
-      <div>
-        <span class="badge">Can Teach: Python, Excel</span>
-        <span class="badge">Wants: Digital Marketing, Yoga</span>
-      </div>
-      <div>
-        <span class="lang">English</span>
-        <span class="lang">Hindi</span>
-        <span class="lang">मराठी</span>
-      </div>
-      <div class="qr-link">
-        <div>Profile QR:</div>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://swapera.com/u/rahul" width="80" alt="QR">
-        <div><a href="#">Share Profile</a></div>
-      </div>
-      <button class="kyc-btn">Upgrade / Verify</button>
-    </aside>
-    <!-- Main Area -->
-    <section class="main-area">
-      <!-- Skill Discovery & Matchmaking -->
+
+  <!-- HEADER -->
+  <header>
+    <h1>SwapEra</h1>
+    <p>Teach What You Know. Learn What You Love.</p>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h2>India's First Peer-to-Peer Skill Swapping Platform</h2>
+    <p>No Fees. No Instructors. Just Real People Helping Each Other Grow.</p>
+    <a href="#signup" class="cta">Get Started</a>
+  </section>
+
+  <!-- HOW IT WORKS -->
+  <section id="how">
+    <h2>How It Works</h2>
+    <div class="feature-grid">
       <div class="card">
-        <h3>🔍 Skill Discovery & Matchmaking</h3>
-        <div class="match-list">
-          <div class="match-item">
-            <div class="name">Priya Dubey <span class="badge">Yoga</span></div>
-            <div class="skills"><b>Wants:</b> Coding Basics<br><b>Can Teach:</b> Yoga</div>
-            <button class="btn">Match & Chat</button>
-          </div>
-          <div class="match-item">
-            <div class="name">Amit Verma <span class="badge">Excel</span></div>
-            <div class="skills"><b>Wants:</b> Digital Marketing<br><b>Can Teach:</b> Excel</div>
-            <button class="btn">Match & Chat</button>
-          </div>
-          <div class="match-item">
-            <div class="name">Ankita Joshi <span class="badge">Photoshop</span></div>
-            <div class="skills"><b>Wants:</b> Content Writing<br><b>Can Teach:</b> Photoshop</div>
-            <button class="btn">Match & Chat</button>
-          </div>
-        </div>
+        <h3>1. Sign Up</h3>
+        <p>Tell us what you can teach and what you want to learn.</p>
       </div>
-      <!-- Session Scheduler -->
       <div class="card">
-        <h3>🗓️ Session Scheduler</h3>
-        <div class="calendar">
-          <div class="session">
-            <div><b>Yoga with Priya</b></div>
-            <div>14 Jun, 7:00 AM <span style="color:#888;font-size:0.97em;">(Asia/Kolkata)</span></div>
-            <div class="actions">
-              <button>Reschedule</button>
-              <button style="color:var(--red);border-color:var(--red);">Cancel</button>
-            </div>
-          </div>
-          <div class="session">
-            <div><b>Excel with Amit</b></div>
-            <div>15 Jun, 6:30 PM <span style="color:#888;font-size:0.97em;">(Asia/Kolkata)</span></div>
-            <div class="actions">
-              <button>Join</button>
-            </div>
-          </div>
-        </div>
+        <h3>2. Get Matched</h3>
+        <p>We connect you with people who have matching skills.</p>
       </div>
-      <!-- Live Video & Chat -->
       <div class="card">
-        <h3>🎥 Live Class & 💬 Chat</h3>
-        <div class="video-area">
-          <div class="video-box">
-            <div style="background:#0077cc22;border-radius:16px;height:120px;width:95%;margin:auto;display:flex;align-items:center;justify-content:center;">
-              <span style="font-size:1.4em;color:#0077cc;">[ Video Call (Zoom/Meet) ]</span>
-            </div>
-            <button style="margin-top:18px;background:var(--green);padding:7px 18px;color:#fff;border:none;border-radius:7px;font-weight:600;">Start/Join Live Session</button>
-          </div>
-          <div class="chat-box" id="chat">
-            <div class="chat-msg">Priya: Good morning!</div>
-            <div class="chat-msg me">You: Hi! Ready for yoga?</div>
-            <div class="chat-msg">Priya: Absolutely. Let's begin.</div>
-            <div class="chat-input-row">
-              <input type="text" placeholder="Type a message..." id="chatInput">
-              <button onclick="document.getElementById('chat').innerHTML += '<div class=\'chat-msg me\'>' + document.getElementById('chatInput').value + '</div>';document.getElementById('chatInput').value='';">Send</button>
-            </div>
-          </div>
-        </div>
+        <h3>3. Swap & Learn</h3>
+        <p>Learn one skill by teaching another. It’s free, always.</p>
       </div>
-      <!-- Rating & Reviews -->
+    </div>
+  </section>
+
+  <!-- FEATURES -->
+  <section id="features">
+    <h2>Platform Features</h2>
+    <div class="feature-grid">
       <div class="card">
-        <h3>⭐ Rate & Review</h3>
-        <div class="ratings-row">
-          <span style="font-weight:500;">Yoga with Priya</span>
-          <span class="star">★ ★ ★ ★ ★</span>
-          <span class="review">"Great class, very interactive!"</span>
-        </div>
-        <div class="ratings-row">
-          <span style="font-weight:500;">Excel with Amit</span>
-          <span class="star">★ ★ ★ ★ ☆</span>
-          <span class="review">"Learnt new tips. Thanks!"</span>
-        </div>
+        <h3>Skill Matching</h3>
+        <p>Find users with complementary skills in your city or online.</p>
       </div>
-      <!-- Notifications -->
       <div class="card">
-        <h3>🔔 Notifications</h3>
-        <div class="notif-list">
-          <div class="notif">Reminder: "Yoga with Priya" starts in 1 hour!</div>
-          <div class="notif">You have a new skill match: "Amit Verma (Excel)"</div>
-          <div class="notif">You received a review from Priya: "Amazing student!"</div>
-        </div>
+        <h3>Profile Dashboard</h3>
+        <p>View your swap history, matches, and availability easily.</p>
       </div>
-      <!-- Progress Tracker -->
       <div class="card">
-        <h3>📈 Learning Progress</h3>
-        <div class="progress-label">Sessions Attended: 5 / 10</div>
-        <div class="progress-bar"><div class="progress" style="width:50%;background:var(--primary);height:100%;border-radius:8px;"></div></div>
-        <div class="progress-label">Skills Learned: 2</div>
-        <div class="progress-bar"><div class="progress" style="width:70%;background:var(--green);height:100%;border-radius:8px;"></div></div>
-        <div style="margin-top:10px;">
-          <span class="badge" style="background:#d0ffe7;color:#117c45;">Streak: 3 days</span>
-          <span class="badge" style="background:#e0e6ff;color:#2b2b89;">Python Badge</span>
-          <span class="badge" style="background:#fff5c7;color:#b09300;">Excel Certification</span>
-        </div>
+        <h3>Verified Swappers</h3>
+        <p>Optional verified profiles for trust and safety.</p>
       </div>
-    </section>
-  </div>
+      <div class="card">
+        <h3>Online & In-Person</h3>
+        <p>Swap skills virtually or meet in your locality. You choose.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- SIGNUP FORM -->
+  <section id="signup" class="form-section">
+    <h2>Join SwapEra Now</h2>
+    <p>Fill the form below. We'll match you soon.</p>
+    <form>
+      <input type="text" placeholder="Full Name" required />
+      <input type="email" placeholder="Email Address" required />
+      <input type="text" placeholder="City" required />
+      <input type="text" placeholder="Skills You Can Teach" required />
+      <input type="text" placeholder="Skills You Want to Learn" required />
+      <select required>
+        <option value="">Preferred Time Slot</option>
+        <option>Morning</option>
+        <option>Afternoon</option>
+        <option>Evening</option>
+        <option>Flexible</option>
+      </select>
+      <select required>
+        <option value="">Mode of Learning</option>
+        <option>Online</option>
+        <option>In-Person</option>
+        <option>Both</option>
+      </select>
+      <textarea placeholder="Short Bio" rows="3" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about">
+    <h2>About SwapEra</h2>
+    <p>SwapEra is a grassroots movement to change how we learn. In a country where access to skills often depends on money, we're flipping the game — you learn by teaching others. It’s social, it’s fun, and it’s completely free.</p>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Have questions or feedback? Reach out at <a href="mailto:hello@swapera.in">hello@swapera.in</a></p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 SwapEra | Built for India’s Skill Revolution 🌱</p>
+  </footer>
+
 </body>
 </html>
